--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">My Projects</a></li>
+                    
                 </ul>
             </div>
         </nav>
@@ -47,12 +47,12 @@
                         Taman Palem Lestari Blok C17A No.1, Cengkareng 11730 · (+62) 817-766-5538 ·
                         <a href="mailto:name@email.com">javindjapri@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-5">I am an undergraduate computer science student from Bina Nusantara University.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/javinD"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://github.com/JavinD"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="javindjapri@gmail.com"><i class="fab fa-gmail"></i></a>
+                
                     </div>
                 </div>
             </section>
