--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">My Projects</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">My Projects</a></li>
                     
                 </ul>
             </div>
@@ -51,7 +51,7 @@
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/javinD"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/JavinD"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="javindjapri@gmail.com"><i class="fab fa-gmail"></i></a>
+                        <a class="social-icon" href="javindjapri@gmail.com"><i class="fab fa-email"></i></a>
                 
                     </div>
                 </div>
