--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/javinD"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/JavinD"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="https://javindjapri@gmail.com"><i class="fab fa-envelope-square"></i></a>
-                        <a class="social-icon" href="https://javindjapri@gmail.com"><i class="fab fa-whatsapp"></i></a>
+                        <a class="social-icon" href="https://javindjapri@gmail.com"><i class="fas fa-envelope-square"></i></a>
+                        <a class="social-icon" href="https://api.whatsapp.com/send?phone=6281776675538"><i class="fab fa-whatsapp"></i></a>
                     
                 
                     </div>
@@ -121,11 +121,11 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">My Projects</h2>
                     <ul class="subheading mb-3">
-                        <li>Youtube-LSVM</li>
-                        <li>Self Organizing Map Algorithm</li>
-                        <li>Two-Layered Perceptron</li>
-                        <li>Simple Food Recommendation System</li>
-                        <li>Contribution on UIGram</li>
+                        <li href="https://github.com/JavinD/YouTube-LSVM">Youtube-LSVM</li>
+                        <li href="https://github.com/JavinD/SOM-ClusteringExample">Self Organizing Map Algorithm</li>
+                        <li href="https://github.com/JavinD/Two-layeredANNClassification">Two-Layered Perceptron</li>
+                        <li href=#>Simple Food Recommendation System</li>
+                        <li href="uigram.herokuapp.com">Contribution on UIGram</li>
                     </ul>
                 </div>
             </section>
