--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         <li> <a href="https://github.com/JavinD/SOM-ClusteringExample">Self Organizing Map Algorithm</li>
                         <li> <a href="https://github.com/JavinD/Two-layeredANNClassification">Two-Layered Perceptron</li>
                         <li> <a href=#>Simple Food Recommendation System</li>
-                        <li> <a href="uigram.herokuapp.com">Contribution on UIGram</li>
+                        <li> <a href="https://uigram.herokuapp.com">Contribution on UIGram</li>
                     </ul>
                 </div>
             </section>
