--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
                         <li> <a href="https://github.com/JavinD/Two-layeredANNClassification">Two-Layered Perceptron</li>
                         <li> <a href=#>Simple Food Recommendation System</li>
                         <li> <a href="https://uigram.herokuapp.com">Contribution on UIGram</li>
+                        <li class="fa mb-0"> <a href="https://github.com/teodorus-nathaniel/uigram">UIGram Code</li>
                     </ul>
                 </div>
             </section>
