--- a/index.html
+++ b/index.html
@@ -108,8 +108,7 @@
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
                         <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-c-line"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-cplusplus-line"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-cuttlefish"></i></li>
                         <li class="list-inline-item"><i class="fab fa-java"></i></li>
                         <li class="list-inline-item"><i class="fab fa-python"></i></li>
                     </ul>
@@ -126,7 +125,7 @@
                         <li> <a href="https://github.com/JavinD/Two-layeredANNClassification">Two-Layered Perceptron</li>
                         <li> <a href=#>Simple Food Recommendation System</li>
                         <li> <a href="https://uigram.herokuapp.com">Contribution on UIGram</li>
-                        <li class="flex-shrink-0"> <a href="https://github.com/teodorus-nathaniel/uigram">UIGram Code</li>
+                        <li class="lead mb-5"> <a href="https://github.com/teodorus-nathaniel/uigram">UIGram Code</li>
                     </ul>
                 </div>
             </section>
