--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                         <li> <a href="https://github.com/JavinD/YouTube-LSVM">Youtube-LSVM</li>
                         <li> <a href="https://github.com/JavinD/SOM-ClusteringExample">Self Organizing Map Algorithm</li>
                         <li> <a href="https://github.com/JavinD/Two-layeredANNClassification">Two-Layered Perceptron</li>
-                        <li> <a href=#>Simple Food Recommendation System</li>
+                        <li> <a href=#>Inappropriate Video Content Filter</li>
                         <li> <a href="https://uigram.herokuapp.com">Contribution on UIGram</li>
                         <li class="lead mb-5"> <a href="https://github.com/teodorus-nathaniel/uigram">UIGram Code</li>
                     </ul>
